<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/notificationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        style="@style/TextAppearance.Compat.Notification.Title" />

    <TextView
        android:id="@+id/notificationDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spb_notification_desc"
        android:layout_marginTop="5dp"
        style="@style/TextAppearance.Compat.Notification.Info" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/notificationAction1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/sleep_screen"
            android:textStyle="bold"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/notificationAction2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/power_menu"
            android:textStyle="bold"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/notificationAction3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/stop_all"
            android:textStyle="bold"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/notificationAction4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/close"
            android:textStyle="bold"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="14sp"/>

    </LinearLayout>

</LinearLayout>